--- a/Koha/Plugin/Com/BibLibre/DIBSPayments/opac_online_payment_begin.tt
+++ b/Koha/Plugin/Com/BibLibre/DIBSPayments/opac_online_payment_begin.tt
@@ -1,7 +1,7 @@
 [% USE Koha %]
 [% USE KohaDates %]
 
-[% INCLUDE 'doc-head-open.inc' %][% IF ( LibraryNameTitle ) %][% LibraryNameTitle %][% ELSE %]Koha online[% END %] catalog &rsaquo; Pay your fines and charges
+[% INCLUDE 'doc-head-open.inc' %]
 [% INCLUDE 'doc-head-close.inc' %]
 [% BLOCK cssinclude %][% END %]
 </head>
