--- a/Koha/Plugin/Com/BibLibre/DIBSPayments/opac_online_payment_begin.tt
+++ b/Koha/Plugin/Com/BibLibre/DIBSPayments/opac_online_payment_begin.tt
@@ -38,7 +38,7 @@
                         <input id="merchant" name="merchant" type="hidden" value="[% merchant %]"/>
                         <input id="orderid" name="orderid" type="hidden" value="[% orderid %]"/>
                         <input id="lang" name="lang" type="hidden" value="[% lang %]"/>
-                        <input id="structuredOrderInformation" name="structuredOrderInformation" type="hidden" value='[% structuredOrderInformation %]'/>
+                        <input id="md5key" name="md5key" type="hidden" value='[% md5key %]'/>
                     </form>
                 </div>
             </div>
