DIBS plugin: add currency support

--- a/Koha/Plugin/Com/BibLibre/DIBSPayments/opac_online_payment_end.tt
+++ b/Koha/Plugin/Com/BibLibre/DIBSPayments/opac_online_payment_end.tt
@@ -26,7 +26,7 @@
                 <div id="useraccount" class="maincontent">
                     <div class="alert alert-info">
                         [% IF message == 'valid_payment' %]
-                            <p>Your payment of FIXME: currency [% message_value %] has been processed sucessfully!</p>
+                            <p>Your payment of [% currency %] [% message_value %] has been processed sucessfully!</p>
                         [% ELSIF message == 'no_amount' %]
                             <p>No amount was passed in!</p>
                             <p>Please contact a librarian for details.</p>
