Translate to swedish

--- a/Koha/Plugin/Com/BibLibre/DIBSPayments/opac_online_payment_begin.tt
+++ b/Koha/Plugin/Com/BibLibre/DIBSPayments/opac_online_payment_begin.tt
@@ -10,9 +10,9 @@
 
 <div class="main">
     <ul class="breadcrumb">
-        <li><a href="/cgi-bin/koha/opac-main.pl">Home</a> <span class="divider">&rsaquo;</span></li>
+        <li><a href="/cgi-bin/koha/opac-main.pl">Hem</a> <span class="divider">&rsaquo;</span></li>
         <li><a href="/cgi-bin/koha/opac-user.pl">[% borrower.firstname %] [% borrower.surname %]</a><span class="divider">&rsaquo;</span></li>
-        <li><a href="#">Pay your fines and charges</a></li>
+        <li><a href="#">Betala dina avgifter</a></li>
     </ul>
 
     <div class="container-fluid">
@@ -26,7 +26,7 @@
             <div class="span10">
                 <div id="useraccount" class="maincontent">
                     <p>
-                        Momentarily you will be redirected to the DIBS payment portal.
+                        Du skickas nu vidare till DIBS betalningstjänst.
                     </p>
                 
                     <form id="dibsform" method="post" action="[% DIBSURL %]">
