--- a/Koha/Plugin/Com/BibLibre/DIBSPayments/opac_online_payment_end.tt
+++ b/Koha/Plugin/Com/BibLibre/DIBSPayments/opac_online_payment_end.tt
@@ -10,9 +10,9 @@
 
 <div class="main">
     <ul class="breadcrumb">
-        <li><a href="/cgi-bin/koha/opac-main.pl">Home</a> <span class="divider">&rsaquo;</span></li>
+        <li><a href="/cgi-bin/koha/opac-main.pl">Hem</a> <span class="divider">&rsaquo;</span></li>
         <li><a href="/cgi-bin/koha/opac-user.pl">[% borrower.firstname %] [% borrower.surname %]</a><span class="divider">&rsaquo;</span></li>
-        <li><a href="#">Payment results</a></li>
+        <li><a href="#">Betalningsresultat</a></li>
     </ul>
 
     <div class="container-fluid">
@@ -26,7 +26,7 @@
                 <div id="useraccount" class="maincontent">
                     <div class="alert alert-info">
                         [% IF message == 'valid_payment' %]
-                            <p>Your payment of [% currency %] [% message_value %] has been processed sucessfully!</p>
+                            <p>Din betalning på [% message_value %] [% currency %] har genomförts.</p>
                         [% ELSIF message == 'no_amount' %]
                             <p>No amount was passed in!</p>
                             <p>Please contact a librarian for details.</p>
